Fixes tab misplacement on Safari vaadin/spreadsheet#17105

--- a/vaadin-spreadsheet-flow-parent/vaadin-spreadsheet/src/main/webapp/VAADIN/addons/spreadsheet/_spreadsheet-legacy.scss
+++ b/vaadin-spreadsheet-flow-parent/vaadin-spreadsheet/src/main/webapp/VAADIN/addons/spreadsheet/_spreadsheet-legacy.scss
@@ -810,11 +810,9 @@ $cell-comment-border-color: #A7A7A7 !default;
 							font-size: 14px;
 							font-weight: 300;
 							height: 20px;
-							margin-top: 4px;
-							margin-left: 10px;
 							outline: none !important;
 							padding: 0 !important;
-							position: absolute;
+							position: relative;
 							top: 0;
 							left: 0;
 							width: inherit;
