--- a/vaadin-spreadsheet-flow-parent/vaadin-spreadsheet/src/main/webapp/VAADIN/addons/spreadsheet/_spreadsheet-valo.scss
+++ b/vaadin-spreadsheet-flow-parent/vaadin-spreadsheet/src/main/webapp/VAADIN/addons/spreadsheet/_spreadsheet-valo.scss
@@ -816,11 +816,9 @@
 							border: none !important;
 							font-weight: 300;
 							height: $spreadsheet-tab-height;
-							margin-top: $spreadsheet-tab-padding-vertical;
-							margin-left: $spreadsheet-tab-padding-horizontal + 2 * $spreadsheet-border-width;
 							outline: none !important;
 							padding: 0 !important;
-							position: absolute;
+							position: relative;
 							top: 0;
 							left: 0;
 							width: inherit;
